# Axone-OpenShare-dApp

./: .gitignore  Cargo.toml  README.md  myvalidator.json  validator.json
backend/: index.js  package-lock.json  package.json
backend/frontend/src/: App.js
frontend/: .npmrc  .npmrc.txt  package-lock.json  package.json
frontend/src/: App.js
frontend/src/chains/: axone.js
src/: contract.rs  error.rs  lib.rs  msg.rs  schema.rs  state.rs
