[package]
name = "axone_openshare"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schema"
path = "src/bin/schema.rs"

[dependencies]
cosmwasm-std = "1.0"
cosmwasm-storage = "1.0"
cosmwasm-schema = "1.0"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
cw-storage-plus = "1.0"
thiserror = "1.0"


[features]
default = ["library"]
library = []
